tests/ui/invalid_size_assertion.stderr
error[E0080]: evaluation panicked: struct byte size assertion failed
  --> tests/ui/invalid_size_assertion.rs:3:1
   |
 3 | / bitstruct! {
 4 | |     #[repr(C)]
 5 | |     #[size(bytes = 3)]
 6 | |     struct Bad {
...  |
10 | | }
   | |_^ evaluation of `_` failed here
